unpackaged/main/default/objects/Location__c/fields/UNH_Identifier__c.field-meta.xml
<CustomField>
    <fullName>UNH_Identifier__c</fullName>
    <label>UNH Identifier</label>
    <length>4</length>
    <type>Text</type>
</CustomField>