unpackaged/main/default/objects/Location__c/listViews/Formstack_Programs_List.listView-meta.xml
<ListView>
    <fullName>Formstack_Programs_List</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Actively Enrolling</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>Change the World</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>Latin America Honors</value>
    </filters>
    <label>Formstack Programs List</label>
    <sharedTo>
        <role>Revenue_Operations</role>
    </sharedTo>
</ListView>